fix: Testimonials completed, spacings edited

--- a/assets/css/marketing-funnel-style.scss
+++ b/assets/css/marketing-funnel-style.scss
@@ -56,16 +56,36 @@
     }
   }
 
-  .story-position {
-    display: flex;
-    align-items: center;
-  }
+.story-position {
+  display: flex;
+  align-items: center;
+}
 
-  .testimonial-headline {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.testimonial-headline {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.benefits-list {
+  padding: 0 $spacer;
+
+  @include media-breakpoint-up("md") {
+    padding: 0 0;
   }
+}
+
+.after-life {
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+
+  @include media-breakpoint-up("md") {
+    flex-direction: row;
+    text-align: left;
+    align-items: flex-start;
+  }
+}
 
 
   
